--- a/common/tasks/pre.yaml
+++ b/common/tasks/pre.yaml
@@ -1,6 +1,6 @@
 - name: remove existing app location
   ansible.builtin.file:
-    path: {{ app_location }}
+    path: "{{ app_location }}"
     state: absent
   ignore_error: true
 
@@ -12,5 +12,5 @@
 - name: download and extract the {{ component }} code
   ansible.builtin.unarchive:
     src: https://expense-builds.s3.us-east-1.amazonaws.com/expense-{{component}}-v2.zip
-    dest: {{ app_location }}
+    dest: "{{ app_location }}"
     remote_src: yes 
