--- a/common/tasks/pre.yaml
+++ b/common/tasks/pre.yaml
@@ -6,7 +6,7 @@
 
 - name: create app directory
   ansible.builtin.file:
-      path: /app
+      path: "{{ app_location }}"
       state: directory
 
 - name: download and extract the {{ component }} code
