--- a/mysql.yaml
+++ b/mysql.yaml
@@ -1,5 +1,7 @@
 - name: configure mysql servers
   hosts: mysql
   become: yes
+  vars_files:
+  - /var/expense/credentials_mysql.yaml
   roles:
   - mysql 
