--- a/roles/backend/vars/main.yaml
+++ b/roles/backend/vars/main.yaml
@@ -1,6 +1,6 @@
 
-    mysql_root_password: ExpenseApp@1
-    login_host: mysql.hraje.online
+    #mysql_root_password: ExpenseApp@1
+    #login_host: mysql.hraje.online
     app_location : /app
     component : backend
   
