--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -24,11 +24,15 @@
       name: expense
 
   - name: import tasks from common role
+    tags:
+    - deployment
     ansible.builtin.import_role:
       name: common
       tasks_from: pre
 
   - name: install dependencies
+    tags:
+    - deployment
     ansible.builtin.command: npm install
     args: 
       chdir: /app
@@ -48,6 +52,8 @@
       target: /app/schema/backend.sql
 
   - name: daemon reload
+    tags:
+    - deployment
     ansible.builtin.systemd_service:
       daemon_reload: true
       state: restarted
